Add Maxlength property

--- a/demo/gig-input.html
+++ b/demo/gig-input.html
@@ -26,6 +26,7 @@
             -webkit-transition: border-color ease-in-out .15s, -webkit-box-shadow ease-in-out .15s;
             -o-transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s;
             transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s;
+            @apply(--input-style);
         }
         input:focus {
             border-color: var(--input-border-color-focus, #62a8ea);
@@ -76,6 +77,26 @@
             font-size: 85%;
         }
 
+        .maxlength {
+            float: right;
+            border-radius: 3px;
+            margin: 5px 0;
+            color: white;
+            font-weight: bold;
+            padding: 2px 5px;
+            font-size: 75%;
+            display: block
+        }
+
+        .maxlength.success {
+            background-color: var(--input-color-success, #46BE8A);
+        }
+
+        .maxlength.error {
+            background-color: var(--input-color-error, #f96868);
+            color: white !important;
+        }
+
     </style>
 
     <template>
@@ -94,11 +115,18 @@
                type="{{typeFormat}}"
                value="{{value}}"
                class$="[[getClassList(errorMessage)]]"
-               on-keyup="keyupEvent">
+               on-keyup="keyupEvent"
+               on-focus="focusEvent"
+               on-blur="blurEvent">
 
         <template is="dom-if" if="[[errorMessage]]">
             <div class="error small">[[errorMessage]]</div>
         </template>
+
+        <template is="dom-if" if="{{maxLengthShow}}">
+            <span class$="[[_getMaxLengthClass(value, maxlength)]]"><span>{{length(value)}}</span> / <span>{{maxlength}}</span></span>
+        </template>
+
     </template>
 
     <script>
@@ -119,10 +147,6 @@
                         classList += 'error';
                     }
 
-
-                    console.log(classList);
-
-
                     return classList;
                 },
                 keyupEvent: function () {
@@ -131,7 +155,47 @@
                         case 'slug':
                             self.value = self._generatorSlug(self.$.input.value)
                             break;
+                        default:
+                            self.value = self.$.input.value;
+                        break;
                     }
+                    this._checkMaxLength();
+                },
+                focusEvent: function(e) {
+                    this._checkMaxLength();
+                },
+                blurEvent: function() {
+                    this.maxLengthShow = false;
+                },
+                length: function(value) {
+                    return value.length;
+                },
+                _checkMaxLength: function() {
+
+                    if (this.$.input.value && this.maxlength) {
+                        var percentage = ((this.$.input.value.length / this.maxlength) * 100).toFixed(2);
+
+                        if (percentage > 70) {
+                            this.maxLengthShow = true;
+                        } else {
+                            this.maxLengthShow = false;
+                        }
+                    }
+
+                },
+                _getMaxLengthClass: function(value, maxlength) {
+
+                    var classList = 'maxlength';
+                    var percentage = ((value.length / maxlength) * 100).toFixed(2);
+
+                    if (percentage < 100) {
+                        classList += ' success';
+                    } else {
+                        classList += ' error';
+                    }
+
+                    return classList;
+
                 },
                 _generatorSlug: function(str) {
                     str = str.replace(/^\s+|\s+$/g, '');
@@ -185,6 +249,13 @@
                     typeFormat: {
                         type: String,
                         value: 'text',
+                        notify: true
+                    },
+                    maxlength: {
+                        type: Number
+                    },
+                    maxLengthShow: {
+                        type: Boolean,
                         notify: true
                     }
                 }
