--- a/demo/index.html
+++ b/demo/index.html
@@ -6,26 +6,15 @@
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
     <meta name="mobile-web-app-capable" content="yes">
     <title>Gig Component fieldMap Demo</title>
-    <link rel="import" href="/demo/gig-input.html">
+    <link rel="import" href="demo/gig-input.html">
 
     <style is="custom-style">
-        body {
-            margin: 0;
-            padding: 0;
-        }
-
-        .field {
-            padding: 10px;
-        }
 
 
     </style>
 </head>
 <body>
-    <div class="field">
-        <gig-input class="input" placeholder="Escribe un código" type="slug"></gig-input>
-    </div>
-
+    <gig-input type="text" class="input" placeholder="Escribe un texto" maxlength="23"></gig-input>
 </body>
 
 </html>
