--- a/gig-input.html
+++ b/gig-input.html
@@ -1,3 +1,10 @@
+<!--
+ Webcomponents to manage and generate one slug. Returns value
+ @version v0.0.1 - 2015-08-19
+ @link https://github.com/gigigo-html5/gig-input
+ @author Pedro José Peña Jerez <pedro.jose@gigigo.com>
+ @license MIT License, http://www.opensource.org/licenses/MIT
+ -->
 <link rel="import" href="../polymer/polymer.html">
 
 <dom-module id="gig-input">
