--- a/demo/gig-input.html
+++ b/demo/gig-input.html
@@ -1,4 +1,6 @@
 <link rel="import" href="../bower_components/polymer/polymer.html">
+<link rel="stylesheet" href="../bower_components/components-font-awesome/css/font-awesome.css">
+
 
 <dom-module id="gig-input">
 
@@ -97,9 +99,42 @@
             color: white !important;
         }
 
+        .field-group {
+            display: -webkit-flex;
+            -webkit-align-items: center;
+            display: flex;
+            align-items: center;
+        }
+
+        .group-icon input {
+            border-bottom-right-radius: 0;
+            border-top-right-radius: 0;
+        }
+
+        .field-group span {
+            display: inline-block;
+            background-color: #f3f7f9;
+            border: 1px solid #e4eaec;
+            border-radius: 3px;
+            width: 1%;
+            white-space: nowrap;
+            vertical-align: middle;
+            color: #76838f;
+            font-size: 14px;
+            float: right;
+            width: 36px;
+            height: 36px;
+            text-align: center;
+            line-height: 34px;
+            border-bottom-left-radius: 0;
+            border-top-left-radius: 0;
+            border-left: 0;
+        }
+
     </style>
 
     <template>
+        <div class="field-group" class$="[[getClassGroup(icon)]]">
         <input id="input"
                autocomplete$="[[autocomplete]]"
                required$="[[required]]"
@@ -118,6 +153,13 @@
                on-keyup="keyupEvent"
                on-focus="focusEvent"
                on-blur="blurEvent">
+
+               <template is="dom-if" if="[[icon]]">
+                   <span class$="[[getClassIcon(icon)]]"></span>
+               </template>
+
+
+        </div>
 
         <template is="dom-if" if="[[errorMessage]]">
             <div class="error small">[[errorMessage]]</div>
@@ -139,6 +181,18 @@
                 ready: function() {
                     this._checkType();
 
+                },
+                getClassGroup: function(icon) {
+                    var classList = 'field-group';
+
+                    if (icon) {
+                        classList += ' group-icon';
+                    }
+
+                    return classList;
+                },
+                getClassIcon: function(icon) {
+                    return 'fa '+icon;
                 },
                 getClassList: function(errorMessage) {
                     var classList = '';
@@ -257,6 +311,10 @@
                     maxLengthShow: {
                         type: Boolean,
                         notify: true
+                    },
+                    icon: {
+                        type: String,
+                        value: null
                     }
                 }
             })
