--- a/demo/index.html
+++ b/demo/index.html
@@ -22,7 +22,7 @@
         <gig-input type="text" class="input" placeholder="Escribe un texto" maxlength="23"></gig-input>
     </div>
     <div class="field">
-        <gig-input type="date"></gig-input>
+        <gig-input type="date" icon="fa-calendar"></gig-input>
     </div>
 </body>
 
