--- a/gig-input.html
+++ b/gig-input.html
@@ -1,11 +1,60 @@
 <!--
  Webcomponents to manage and generate one slug. Returns value
- @version v0.0.1 - 2015-08-23
+ @version v0.0.1 - 2015-08-24
  @link https://github.com/gigigo-html5/gig-input
  @author Pedro José Peña Jerez <pedro.jose@gigigo.com>
  @license MIT License, http://www.opensource.org/licenses/MIT
  -->
+<link href="../polymer/polymer.html">
+<script src="../pikaday/pikaday.js"></script>
+<script src="../moment/moment.js"></script>
+<script src="../moment/locale/es.js"></script>
+<link rel="stylesheet" href="../pikaday/css/pikaday.css">
+
+
+<script>
+    Polymer.GigInputDateBehavior = {
+        enableDate: function() {
+            self = this;
+
+            moment.locale(self.lang);
+
+            var picker = new Pikaday({
+                field: this.$.input,
+                format: this.formatDate,
+                position: 'bottom left',
+                reposition: false,
+                minDate: this.minDate,
+                i18n: {
+                    previousMonth : 'Previous Month',
+                    nextMonth     : 'Next Month',
+                    months        : moment.localeData()._months,
+                    weekdays      : moment.localeData()._weekdays,
+                    weekdaysShort : moment.localeData()._weekdaysShort
+                },
+                onSelect: function (date) {
+                    self.$.input.value = moment(date).format(self.formatDate);
+                }
+            });
+
+        },
+        properties: {
+            formatDate: {
+                type: String,
+                value: 'DD/MM/YYYY',
+                notify: true
+            },
+            minDate: {
+                type: Date,
+                value: null
+            }
+        }
+
+    }
+</script>
+
 <link rel="import" href="../polymer/polymer.html">
+<link rel="import" href="gig-input-date-behavior.html">
 <link rel="stylesheet" href="../components-font-awesome/css/font-awesome.css">
 
 
@@ -185,9 +234,14 @@
 
             Polymer({
                 is: 'gig-input',
+                behaviors: [
+                    Polymer.GigInputDateBehavior
+                ],
                 ready: function() {
                     this._checkType();
-
+                    if (this.type === 'date') {
+                        this.enableDate();
+                    }
                 },
                 getClassGroup: function(icon) {
                     var classList = 'field-group';
@@ -275,9 +329,10 @@
                     return str;
                 },
                 _checkType: function() {
-                    if (this.type === 'slug') {
+                    if (this.type === 'slug' || this.type === 'date') {
                         this.typeFormat = 'text';
-                    } else {
+                    }
+                    else {
                         this.typeFormat = this.type;
                     }
                 },
@@ -322,6 +377,11 @@
                     icon: {
                         type: String,
                         value: null
+                    },
+                    lang: {
+                        type: String,
+                        value: 'en',
+                        notify: true
                     }
                 }
             })
