--- a/src/gig-input.html
+++ b/src/gig-input.html
@@ -1,4 +1,5 @@
 <link rel="import" href="../polymer/polymer.html">
+<link rel="import" href="gig-input-date-behavior.html">
 <link rel="stylesheet" href="../components-font-awesome/css/font-awesome.css">
 
 
@@ -178,9 +179,14 @@
 
             Polymer({
                 is: 'gig-input',
+                behaviors: [
+                    Polymer.GigInputDateBehavior
+                ],
                 ready: function() {
                     this._checkType();
-
+                    if (this.type === 'date') {
+                        this.enableDate();
+                    }
                 },
                 getClassGroup: function(icon) {
                     var classList = 'field-group';
@@ -268,9 +274,10 @@
                     return str;
                 },
                 _checkType: function() {
-                    if (this.type === 'slug') {
+                    if (this.type === 'slug' || this.type === 'date') {
                         this.typeFormat = 'text';
-                    } else {
+                    }
+                    else {
                         this.typeFormat = this.type;
                     }
                 },
@@ -315,6 +322,11 @@
                     icon: {
                         type: String,
                         value: null
+                    },
+                    lang: {
+                        type: String,
+                        value: 'en',
+                        notify: true
                     }
                 }
             })
