--- a/gig-input.html
+++ b/gig-input.html
@@ -56,7 +56,8 @@
 <link rel="import" href="../polymer/polymer.html">
 <link rel="import" href="gig-input-date-behavior.html">
 <link rel="stylesheet" href="../components-font-awesome/css/font-awesome.css">
-
+<link rel="import" href="../iron-validatable-behavior/iron-validatable-behavior.html">
+<link rel="import" href="../iron-form-element-behavior/iron-form-element-behavior.html">
 
 <dom-module id="gig-input">
 
@@ -235,8 +236,19 @@
             Polymer({
                 is: 'gig-input',
                 behaviors: [
-                    Polymer.GigInputDateBehavior
+                    Polymer.GigInputDateBehavior,
+                    Polymer.IronFormElementBehavior,
+                    Polymer.IronValidatableBehavior
                 ],
+                listeners: {
+                    'input': '_onInput'
+                },
+                _onInput: function() {
+                     this.value = this.$.input.value;
+                },
+                _getValidity: function() {
+                     return this.value != '';
+                },
                 ready: function() {
                     this._checkType();
                     if (this.type === 'date') {
