--- a/demo/index.html
+++ b/demo/index.html
@@ -19,10 +19,7 @@
 </head>
 <body>
     <div class="field">
-        <gig-input type="text" class="input" placeholder="Escribe un texto" maxlength="23"></gig-input>
-    </div>
-    <div class="field">
-        <gig-input type="date" icon="fa-calendar"></gig-input>
+        <gig-input type="text" class="input" placeholder="Escribe un texto" maxlength="23" required></gig-input>
     </div>
 </body>
 
