--- a/src/gig-input.html
+++ b/src/gig-input.html
@@ -1,3 +1,4 @@
+
 <link rel="import" href="../polymer/polymer.html">
 <link rel="import" href="gig-input-date-behavior.html">
 <link rel="stylesheet" href="../components-font-awesome/css/font-awesome.css">
@@ -178,6 +179,11 @@
 
             var self;
 
+            function validateEmail(email) {
+                var re = /^([\w-]+(?:\.[\w-]+)*)@((?:[\w-]+\.)*\w[\w-]{0,66})\.([a-z]{2,6}(?:\.[a-z]{2})?)$/i;
+                return re.test(email);
+            }
+
             Polymer({
                 is: 'gig-input',
                 behaviors: [
@@ -190,15 +196,25 @@
                 },
                 _onInput: function() {
                      this.value = this.$.input.value;
+
+                     if (this._getValidity()) {
+                         this.errorMessage = null;
+                     }
                 },
                 _getValidity: function() {
-                     return this.value != '';
+                    if (this.type === 'email') {
+                        return validateEmail(this.value);
+                    } else {
+                        return this.value != '';
+                    }
                 },
                 ready: function() {
                     this._checkType();
                     if (this.type === 'date') {
                         this.enableDate();
                     }
+
+                    this._getValidity();
                 },
                 getClassGroup: function(icon) {
                     var classList = 'field-group';
@@ -300,6 +316,7 @@
                     },
                     value: {
                         type: String,
+                        value: '',
                         notify: true
                     },
                     required: {
