--- a/demo/index.html
+++ b/demo/index.html
@@ -21,6 +21,10 @@
     <div class="field">
         <gig-input type="text" class="input" placeholder="Escribe un texto" maxlength="23" required></gig-input>
     </div>
+
+    <div class="field">
+        <gig-input type="datetime" class="input" placeholder="Inserta una fecha" maxlength="23" required></gig-input>
+    </div>
 </body>
 
 </html>
