Add Font Roboto

--- a/demo/gig-input.html
+++ b/demo/gig-input.html
@@ -4,6 +4,14 @@
 <link rel="stylesheet" href="../bower_components/components-font-awesome/css/font-awesome.css">
 <link rel="import" href="../bower_components/iron-validatable-behavior/iron-validatable-behavior.html">
 <link rel="import" href="../bower_components/iron-form-element-behavior/iron-form-element-behavior.html">
+<script src="https://ajax.googleapis.com/ajax/libs/webfont/1.5.18/webfont.js"></script>
+<script>
+  WebFont.load({
+    google: {
+      families: ['Roboto:300,400']
+    }
+  });
+</script>
 
 <dom-module id="gig-input">
 
@@ -11,7 +19,7 @@
 
         * {
             box-sizing: border-box;
-            font-family: sans-serif;
+            font-family: Roboto,sans-serif;
         }
 
         input {
@@ -21,6 +29,7 @@
             padding: 6px 15px;
             font-size: 14px;
             line-height: 1.57142857;
+            font-weight: 300;
             color: var(--input-color-primary, #76838f);
             background-color: #fff;
             background-image: none;
