--- a/gig-input.html
+++ b/gig-input.html
@@ -1,6 +1,6 @@
 <!--
  Webcomponents to manage and generate one slug. Returns value
- @version v0.0.6 - 2015-12-11
+ @version v0.0.6 - 2015-12-12
  @link https://github.com/gigigo-html5/gig-input
  @author Pedro José Peña Jerez <pedro.jose@gigigo.com>
  @license MIT License, http://www.opensource.org/licenses/MIT
@@ -66,6 +66,14 @@
 <link rel="stylesheet" href="../components-font-awesome/css/font-awesome.css">
 <link rel="import" href="../iron-validatable-behavior/iron-validatable-behavior.html">
 <link rel="import" href="../iron-form-element-behavior/iron-form-element-behavior.html">
+<script src="https://ajax.googleapis.com/ajax/libs/webfont/1.5.18/webfont.js"></script>
+<script>
+  WebFont.load({
+    google: {
+      families: ['Roboto:300,400']
+    }
+  });
+</script>
 
 <dom-module id="gig-input">
 
@@ -73,7 +81,7 @@
 
         * {
             box-sizing: border-box;
-            font-family: sans-serif;
+            font-family: Roboto,sans-serif;
         }
 
         input {
@@ -83,6 +91,7 @@
             padding: 6px 15px;
             font-size: 14px;
             line-height: 1.57142857;
+            font-weight: 300;
             color: var(--input-color-primary, #76838f);
             background-color: #fff;
             background-image: none;
